# assortiment_laz

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: inference.py  preprocessing.py  training.py
src/assortiment_laz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_preprocessing.py
