[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assortiment_laz"
version = "0.1.0"
authors = [
  { name="Luis ALVAREZ", email="lalvarez@avisia.com" },
]
description = "Pipeline de prédiction d'assortiment retail"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Dépendances principales (remplace ton requirements.txt)
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "lightgbm>=4.3.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
# Dépendances pour le développement et les tests
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black",       # Formateur de code
    "isort",       # Trieur d'imports
]

[tool.pytest.ini_options]
# Configuration de pytest pour ne plus avoir de soucis d'import
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"